Added tester activity to experiment with DCPPService (Delete/Revert this commit later)

--- a/AnDC/src/main/AndroidManifest.xml
+++ b/AnDC/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".DCPPService"/>
+        <service android:name="com.phinmadvader.andcpp.DCPPService" />
+
+        <activity
+            android:name="com.phinmadvader.andcpp.TestActivity"
+            android:label="Test Activity" >
+        </activity>
     </application>
 
 </manifest>
