Added UI for download

--- a/AnDC/build.gradle
+++ b/AnDC/build.gradle
@@ -23,6 +23,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:13.0.+'
+    compile files('libs/android-support-v4.jar')
     compile files('libs/libjdcpp-1.0.jar')
 }
