Settings first option implemented(change downloads directory)
settings change downloads directory functionality added.

custom layout implemented for button

layout for new settings list item

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,8 @@
             android:name="com.phinmadvader.andcpp.TestActivity"
             android:label="Test Activity" >
         </activity>
+        <activity 
+            android:name="com.phinmadvader.andcpp.Settings"></activity>
     </application>
 
 </manifest>
